packages/taquito-michel-codec/test/contracts_012/ill_typed/view_toplevel_bad_return_type.tz
parameter nat ;
storage nat ;
code { CAR ; NIL operation ; PAIR } ;
view "add" nat nat { DROP ; PUSH unit Unit } ;
